It is now possible to save the profile and view it from the database

--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -10,6 +10,7 @@
   <div>
     <p><a th:href="@{/}">Home</a></p>
     <p><a th:href="@{/logout}">Log out</a></p>
+     <p><a th:href="@{/user/listaccount}">Find an accountant</a></p>
   </div>
 </body>
 </html>
