--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{base::head}">
 <link rel="stylesheet" href="/css.css">
   <title>User Dashboard</title>
 </head>
 <body>
+<div th:replace="~{base::logo}"></div>
   <h2>Welcome to Admin Dashboard</h2>
   <p>Logged as: <span sec:authentication="name"></span></p>
   <p>Has role: <span sec:authentication="authorities"></span></p>
-  <p><a th:href="@{/}">Home</a></p>
+  <p><a th:href="@{/home}">Home</a></p>
   <p><a th:href="@{/logout}">Log out</a></p>
+  <p><a th:href="@{/admin/profileForm}">MyProfile</a></p>
 </body>
 </html>
