--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,6 @@
 <html xmlns:th="http://thymeleaf.org">
 <head th:replace="~{base::head}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
 	<div th:replace="~{base::logo}"></div>
@@ -11,11 +10,16 @@
 
 		<div class="card mb-3" >
 			<form th:action="@{/login}" class="card-body" method="post">
-				 <h3 th:text="Login"></h3>
-		        <input type="text" name="email" th:placeholder="Email" /> <br /><br />
-		        <input type="password" th:placeholder="Password" name="password" /> <br /><br />
-				<button type="Submit" th:text="Login"></button> | <a th:href="@{|/register|}" th:text="'Register'"></a><br />
-        		<div th:if="${param.error}"><p>Email or Password is invalid.</p></div> <br />
+				<div class="form-group"> 
+					<label for="username">Email</label>
+			        <input class="form-control" type="text" name="email" placeholder="email"></input>
+		        </div>
+		        <div class="form-group">
+			        <label for="password">Password</label>
+			        <input class="form-control" type="password" placeholder="Password" name="password" /></input>
+		        </div>
+					<button class="btn btn-primary" type="Submit" th:text="Login"></button> | <a th:href="@{|/register|}" th:text="'Register'"></a><br />
+        			<div th:if="${param.error}"><p>Email or Password is invalid.</p></div> <br />
 		
 		
 		</form>
