--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,43 @@
-<html xmlns:th="http://thymeleaf.org">
-<head th:replace="~{base::head}">
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org" lang="en">
+<head >
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link th:href="@{css/register-login.css}" rel="stylesheet" />
+<title>MyTaxApp</title>
 </head>
 <body>
-	<div th:replace="~{base::logo}"></div>
+	
 	<div class="container">
-		<div th:replace="~{base :: titulo('Login')}"></div>
-		
+		<div class="form-image">
+			<img th:src="@{/img/login.svg}">
+		</div>
 
-		<div class="card mb-3" >
-			<form th:action="@{/login}" class="card-body" method="post">
-				<div class="form-group"> 
-					<label for="username">Email</label>
-			        <input class="form-control" type="text" name="email" placeholder="email"></input>
-		        </div>
-		        <div class="form-group">
-			        <label for="password">Password</label>
-			        <input class="form-control" type="password" placeholder="Password" name="password" /></input>
-		        </div>
-					<button class="btn btn-primary" type="Submit" th:text="Login"></button> | <a th:href="@{|/register|}" th:text="'Register'"></a><br />
-        			<div th:if="${param.error}"><p>Email or Password is invalid.</p></div> <br />
-		
+		<div class="form" >
+			<form th:action="@{/login}" method="post">
+				<div class="form-header">
+					<div class="title">
+						<h1>Login</h1>
+					</div>
+					<div class="login-button">
+						<button><a th:href="@{|/register|}">Register</a></button>
+					</div>
+				</div>
+				<div class="input-group"> 
+					<div class="input-box">
+						<label for="username">Email</label>
+				        <input class="form-control" type="text" name="email" placeholder="email"></input>
+		       		</div>
+			        <div class="input-box">
+				        <label for="password">Password</label>
+				        <input class="form-control" type="password" placeholder="Password" name="password" /></input>
+			        </div>
+			        <div th:if="${param.error}"><p>Email or Password is invalid.</p></div>
+			    </div>
+		        <div class="continue-button">
+						<button class="btn btn-primary" type="Submit" th:text="Login"></button>	
+				</div>
+				
 		
 		</form>
 
