--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,34 +1,76 @@
-<html xmlns:th="http://thymeleaf.org">
-<head th:replace="~{base::head}">
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org" lang="en">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="styles/login.css">
+<link th:href="@{css/register-login.css}" rel="stylesheet" />
+<title>MyTaxApp</title>
 </head>
 <body>
-	<div th:replace="~{base::logo}"></div>
+ 
+	
 	<div class="container">
-		<div th:replace="~{base :: titulo('Register')}"></div>
+		<div class="form-image">
+			<img th:src="@{/img/register1.svg}">
+		</div>
 		
 
-		<div class="card mb-3" >
-			<form th:action="@{/register}" th:object="${user}" class="card-body" method="post" >
-			<h3>Registration</h3>
-			<input type="text" th:field="*{firstName}" placeholder="First Name" /> <br/><br/>
-		    <input type="text" th:field="*{lastName}" placeholder="Last Name" /> <br/><br/>
-		    <input type="text" th:field="*{mobile}" placeholder="Mobile Number" /> <br/><br/>
-		    <input type="text" th:field="*{email}" placeholder="Email" /> <br/><br/>
-		    <input type="password" th:field="*{password}" placeholder="Password" /> <br/><br/>
-		    <select th:field="*{role}" required>
-		      <option value="">Select</option>
-		      <option value="ADMIN">ADMIN</option>
-		      <option value="USER">USER</option>
-		    </select> <br/><br/>
-			<button type="submit">Register</button> | <a th:href="@{|/login|}" th:text="'Log in'"></a>
-		    <span th:utext="${successMessage}"></span>
-		    <div th:if="${bindingResult!=null && bindingResult.getAllErrors()!=null}">
-		      <ul th:each="data : ${bindingResult.getAllErrors()}">
-		        <li th:text="${data.getObjectName() + ' :: ' + data.getDefaultMessage()}"></li>
-		      </ul>
-		    </div>
+		<div class="form" >
+			<form th:action="@{/register}" th:object="${user}" method="post" >
+				<div class="form-header">
+					<div class="title">
+						<h1>Register</h1>
+					</div>
+					<div class="login-button">
+						<button><a th:href="@{|/login|}">Login</a></button>
+					</div>
+				</div>
+				<div class="input-group">
+					<div class="input-box">
+						<label for="firstname">First Name</label>
+						<input type="text" th:field="*{firstName}" placeholder="First Name"/>
+					</div>
+					
+					<div class="input-box">
+						<label for="lastname">Last Name</label>
+					    <input type="text" th:field="*{lastName}" placeholder="Last Name"/>
+				    </div>
+				    
+				    <div class="input-box">
+				    	<label for="mobile">Mobile Number</label>
+				    	<input type="text" th:field="*{mobile}" placeholder="xxx-xxx-xxxx"/>
+				    </div>
+				    
+				    <div class="input-box">
+				    	<label for="lastname">Email</label>
+				    	<input type="text" th:field="*{email}" placeholder="Email"/>
+				    </div>
+				    
+				    <div class="input-box">
+				    	 <label for="lastname">Password</label>
+				   		 <input type="password" th:field="*{password}" placeholder="Password"/>
+				    </div>
+				    
+				    <div class="input-box">
+				    	<label for="select">Select The Type of User</label>
+					    <select th:field="*{role}" required>
+					      <option value="">Select</option>
+					      <option value="ACCOUNTANT">ACCOUNTANT</option>
+					      <option value="USER">USER</option>
+					    </select> <br/><br/>
+				    </div>
+				    
+			    </div>
+			    	<div class="continue-button">
+						<button type="submit">Register</button>
+					</div>
+					
+					    <span th:utext="${successMessage}"></span>
+					<div th:if="${bindingResult!=null && bindingResult.getAllErrors()!=null}">
+				      	<ul th:each="data : ${bindingResult.getAllErrors()}">
+				        <li th:text="${data.getObjectName() + ' :: ' + data.getDefaultMessage()}"></li>
+				      </ul>
+			      	</div>
 		</form>
 
 		</div>
