--- a/src/main/resources/templates/accountant/dashboard.html
+++ b/src/main/resources/templates/accountant/dashboard.html
@@ -4,7 +4,7 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link th:href="@{css/dash.css}" rel="stylesheet" />
+	<link th:href="@{/css/dash.css}" rel="stylesheet" />
 	<title>MyTaxApp</title>
 	
 </head>
@@ -13,7 +13,7 @@
 	<header class="header">
 		<img class="logo" th:src="@{/img/logo.png}" height="100" width="100">
 		<nav class="navbar">
-			<a th:href="@{/ccountant/profileForm}" class="navitem">My Profile</a>
+			<a th:href="@{/accountant/profileForm}" class="navitem">My Profile</a>
 			<a class="navitem">My Agenda</a>
 			<a th:href="@{/logout}" class="navitem">Logout</a>
 		</nav>
