--- a/src/main/resources/templates/accountant/profileForm.html
+++ b/src/main/resources/templates/accountant/profileForm.html
@@ -20,6 +20,9 @@
 					<div class="title">
 						<h1>Profile</h1>
 					</div>
+					<div class="login-button">
+						<button><a th:href="@{|/accountant/dashboard|}">Dashboard</a></button>
+					</div>
 			</div>
 			<div class="input-group">
 				<div class="input-box">
