--- a/src/main/resources/templates/accountant/dashboard.html
+++ b/src/main/resources/templates/accountant/dashboard.html
@@ -11,12 +11,16 @@
 
 <body>
 	<header class="header">
+		
 		<img class="logo" th:src="@{/img/logo.png}" height="100" width="100">
-		<nav class="navbar">
-			<a th:href="@{/accountant/profileForm}" class="navitem">My Profile</a>
+		<nav class="navbar" >
+			<!--<a th:href="@{/accountant/profileForm}" class="navitem">My Profile</a>-->
+			<a  th:href="@{/accountant/myProfile}" class="navitem">My Profile</a> 
 			<a class="navitem">My Agenda</a>
 			<a th:href="@{/logout}" class="navitem">Logout</a>
+			
 		</nav>
+		
 	
 	</header>
 	
@@ -33,10 +37,7 @@
 			
 	</main>
 	
-	<footer>
 	
-	</footer>
-
 
 
 </body>
