--- a/src/main/resources/static/css/dash.css
+++ b/src/main/resources/static/css/dash.css
@@ -19,7 +19,7 @@ body{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	padding:24px
 	
 }
